some unknown change in analysis_model.ipynb

--- a/analysis_model.ipynb
+++ b/analysis_model.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "1f02f007-5206-4324-81b9-3fe6190cff4e",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,60 @@
     "import seaborn as sns\n",
     "import warnings\n",
     "import os\n",
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Modelling libraries\n",
+    "import sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix,  ConfusionMatrixDisplay\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "import xgboost as xgb\n",
+    "from sklearn.ensemble import IsolationForest\n",
+    "import joblib\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fbf3b138",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ requirements.txt created successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pkg_resources\n",
+    "\n",
+    "# List of external (pip-installable) packages used in your project\n",
+    "packages = [\n",
+    "    \"pandas\",\n",
+    "    \"numpy\",\n",
+    "    \"matplotlib\",\n",
+    "    \"seaborn\",\n",
+    "    \"scikit-learn\",\n",
+    "    \"xgboost\",\n",
+    "    \"joblib\"\n",
+    "]\n",
+    "\n",
+    "# Create requirements.txt with version numbers\n",
+    "with open(\"requirements.txt\", \"w\") as f:\n",
+    "    for pkg in packages:\n",
+    "        try:\n",
+    "            version = pkg_resources.get_distribution(pkg).version\n",
+    "            f.write(f\"{pkg}=={version}\\n\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"⚠️ Could not find version for {pkg}: {e}\")\n",
+    "\n",
+    "print(\"✅ requirements.txt created successfully!\")"
    ]
   },
   {
@@ -671,43 +724,6 @@
    "metadata": {},
    "source": [
     "## Modelling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "id": "c49a255b-3c93-4380-8eed-78ece71bca4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix,  ConfusionMatrixDisplay\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.compose import ColumnTransformer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "bb0f967d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.6.1'"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import sklearn\n",
-    "sklearn.__version__"
    ]
   },
   {
@@ -1419,13 +1435,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "8a6a4ec0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generating the final pipeline\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
     "n_cores = os.cpu_count() - 2\n",
     "\n",
     "pipeline_rfc = Pipeline(\n",
@@ -1982,12 +1997,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "7882ec1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import xgboost as xgb\n",
     "# Compute scale_pos_weight\n",
     "scale_pos_weight = 0.1*(len(y_train[y_train==0]) / len(y_train[y_train==1])) # Reducing scale_pos_weight to reduce the penalty on FN\n",
     "\n",
@@ -2601,13 +2615,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "25a0b366",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- Isolation Forest ---\n",
-    "from sklearn.ensemble import IsolationForest\n",
     "\n",
     "# Train only on non-fraud samples\n",
     "X_train_nonfraud = X_train[y_train==0]\n",
@@ -3210,7 +3223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "275c57cf-36dd-4e06-8f5e-f83f8138724e",
    "metadata": {},
    "outputs": [
@@ -3227,7 +3240,6 @@
    ],
    "source": [
     "# Exporting the pipeline as pkl file\n",
-    "import joblib\n",
     "\n",
     "joblib.dump(pipeline_selected, \"fraud_detection_pipeline.pkl\")"
    ]
